refactor: replace `Date` with `LocalDate` for `birthDate` and enhance mappings
- Update `User` entity to use `LocalDate` for `birthDate` for improved date handling.
- Introduce `ValidAge` custom annotation and `AgeValidator` for birthdate validation.
- Refactor test data across integration tests to accommodate `LocalDate` changes.
- Transition mapping logic in `MedicineMapper`, `ReminderMapper`, and `PageMapper` from custom implementations to `@Mapping` annotations for consistency and readability.
- Update integration test payloads and validation logic in request DTOs to reflect `LocalDate` adjustments.